packages/svelte/tests/compiler-errors/samples/illegal-expression/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'js_parse_error',
		message: 'Assigning to rvalue',
		position: [1, 1]
	}
});
